--- a/templates/manifold.html
+++ b/templates/manifold.html
@@ -53,12 +53,12 @@
                 </div>
               </div>
             </div>
-            <label class="label" for="ybin_modifier">Y-Axis Weighting</label>
+            <label class="label" for="ybin_modifier">Y-Axis Weight</label>
             <div class="field">
               <div class="control is-expanded">
                 <div class="select is-fullwidth">
                   <select name="ybin_modifier" id="ybin_modifier">
-                    <option value="none" selected>No Weighting</option>
+                    <option value="none" selected>No Weight</option>
                     <option value="volume">Weight by Volume</option>
                     <option value="payout" disabled>Weight by Payout</option>
                     <option value="traders" disabled>Weight by Traders</option>
@@ -66,14 +66,16 @@
                 </div>
               </div>
             </div>
-            <label class="label" for="is_predictive">Predictive Label</label>
+            <label class="label" for="point_modifier">Datapoint Scale</label>
             <div class="field">
               <div class="control is-expanded">
                 <div class="select is-fullwidth">
-                  <select name="is_predictive" id="is_predictive" disabled>
-                    <option value="all" selected>All markets</option>
-                    <option value="predictive">Predictive only</option>
-                    <option value="nonpredictive">Non-predictive only</option>
+                  <select name="point_modifier" id="point_modifier">
+                    <option value="none" selected>Default Size</option>
+                    <option value="count">Scale by Number of Markets</option>
+                    <option value="volume">Scale by Total Volume</option>
+                    <option value="payout" disabled>Scale by Total Payout</option>
+                    <option value="traders" disabled>Scale by Total Traders</option>
                   </select>
                 </div>
               </div>
@@ -119,6 +121,18 @@
               </p>
               <div class="control">
                 <input class="input" type="number" name="description_length_val" id="description_length_val" disabled />
+              </div>
+            </div>
+            <label class="label" for="is_predictive">Predictive Label</label>
+            <div class="field">
+              <div class="control is-expanded">
+                <div class="select is-fullwidth">
+                  <select name="is_predictive" id="is_predictive" disabled>
+                    <option value="all" selected>All markets</option>
+                    <option value="predictive">Predictive only</option>
+                    <option value="nonpredictive">Non-predictive only</option>
+                  </select>
+                </div>
               </div>
             </div>
           </div>
@@ -275,6 +289,7 @@
           'xbin_modifier',
           'xbin_size',
           'ybin_modifier',
+          'point_styling',
           'is_predictive',
           'creator_username',
           'question_text',
