--- a/templates/manifold.html
+++ b/templates/manifold.html
@@ -289,7 +289,7 @@
           'xbin_modifier',
           'xbin_size',
           'ybin_modifier',
-          'point_styling',
+          'point_modifier',
           'is_predictive',
           'creator_username',
           'question_text',
