--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Calibration City</title>
-</head>
-<body>
-    <h1>Prediction Markets & Calibration</h1>
-    <p><a href="manifold">Manifold Markets</a></p>
-</body>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
+  </head>
+  <body>
+    <div class="container">
+      <section class="hero is-link">
+        <div class="hero-body">
+          <p class="title">Calibration City</p>
+          <p class="subtitle">An independent analysis of prediction market accuracy</p>
+        </div>
+      </section>
+      <section class="section">
+        <p><a href="manifold">Manifold Markets</a></p>
+      </section>
+    </div>
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <p>Calibration City made with ♡ by <a href="https://wasabipesto.com">wasabipesto</a>.</p>
+      </div>
+    </footer>
+  </body>
 </html>
