--- a/templates/manifold.html
+++ b/templates/manifold.html
@@ -276,6 +276,7 @@
         </div>
       </form>
     </div>
+    <br />
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script>
       document.getElementById('options_form').addEventListener('submit', function (event) {
@@ -424,5 +425,11 @@
         document.getElementById('status_reponse').innerHTML = html
       }
     </script>
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <p>Calibration City made with ♡ by <a href="https://wasabipesto.com">wasabipesto</a>.</p>
+        <p>You can download the cached database <a href="/manifold/db">here</a>.</p>
+      </div>
+    </footer>
   </body>
 </html>
