--- a/templates/manifold.html
+++ b/templates/manifold.html
@@ -428,7 +428,7 @@
     <footer class="footer">
       <div class="content has-text-centered">
         <p>Calibration City made with ♡ by <a href="https://wasabipesto.com">wasabipesto</a>.</p>
-        <p>You can download the cached database <a href="/manifold/db">here</a>.</p>
+        <p>You can download the cached database <a href="/db">here</a>.</p>
       </div>
     </footer>
   </body>
